2003-03-03  Dodji  <dodji@tintin.mifon.org>

	* tests/README-description.txt: 
	added this test description file in the project.
	
	* src/cr-sel-eng.c (cr_sel_eng_get_matched_rulesets_real): 
	renamed the function cr_sel_eng_get_rulesets_real() into
	this new one. Modified it memory management model so that 
	1/ it does not allocate it output array
	2/ caller can use it in a incremental way and get the rulesets
	chunck by chunk.
	(cr_sel_eng_sel_get_matched_rulesets): 
	added this public interface based on the private interface
	cr_sel_eng_get_matched_rulesets_real().
	

2003-03-02  Dodji  <dodji@seketeli.org>

	* src/cr-sel-eng.c (cr_sel_eng_get_rulesets_real): 
	started to code an implementation of a ruleset "requester".
	Still have to debug all this.

2002-09-25  dodji  <dodji@seketeli.org>

	* src/cr-utils.h: updated this file to define stuffs needed by
	other modules.

	* src/cr-parser-input.c: started to write down code to handle
	the stacked parser input.
